--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-autocomplete",
-  "version": "1.8.1",
+  "version": "1.9.0",
   "description": "Accessible, extensible, Autocomplete for React.js",
   "main": "./build/lib/Autocomplete.js",
   "files": [
@@ -77,8 +77,8 @@
     "prop-types": "^15.5.10"
   },
   "peerDependencies": {
-    "react": "^0.14.7 || ^15.0.0-0 || ^16.0.0-0",
-    "react-dom": "^0.14.7 || ^15.0.0-0 || ^16.0.0-0"
+    "react": "^0.14.7 || ^15.0.0-0 || ^16.0.0-0 || ^17.0.0-0 || ^18.0.0-0",
+    "react-dom": "^0.14.7 || ^15.0.0-0 || ^16.0.0-0 || ^17.0.0-0 || ^18.0.0-0"
   },
   "jest": {
     "snapshotSerializers": [
