--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "example": "examples"
   },
   "scripts": {
+    "prepare": "scripty",
     "generate-readme": "scripty",
     "gh-pages": "scripty",
     "release": "scripty",
