--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "files": [
     "build/lib/index.js",
     "build/lib/Autocomplete.js",
-    "dist"
+    "dist",
+    "scripts"
   ],
   "repository": {
     "type": "git",
@@ -18,7 +19,7 @@
     "example": "examples"
   },
   "scripts": {
-    "prepare": "scripty",
+    "prepare": "npm run build:component",
     "generate-readme": "scripty",
     "gh-pages": "scripty",
     "release": "scripty",
